tangy/_ext/src/clocked_buffer.h

typedef struct clk_timetag {
    u64 clock;
    u64 delta;
} clk_timetag;
typedef struct clk {
    u8 channel;
    clk_timetag timestamp;
} clocked;
typedef struct clk_res {
    f64 coarse;
    f64 fine;
} clk_res;
typedef struct clk_slice {
    usize length;
    u8* channel;
    clk_timetag* timestamp;
} clk_slice;
typedef struct clk_timetag_slice clk_timetag_slice;
struct clk_timetag_slice {
    u64* clock;
    u64* delta;
};
u64
clk_size_of() {
    u64 elem_size = sizeof(u8) + sizeof(u64) + sizeof(u64);
    return elem_size;
}
clocked
clk_record_at(const clk_buffer* const buffer, u64 absolute_index) {
    clocked record = { .channel = buffer->ptrs.channel[absolute_index],
                       .timestamp = buffer->ptrs.timestamp[absolute_index] };
    return record;
}
inline u8
clk_channel_at(const clk_buffer* const buffer, u64 absolute_index) {
    return buffer->ptrs.channel[absolute_index];
}
u64
clk_arrival_time_at(const clk_buffer* const buffer, u64 absolute_index) {
    clk_timetag timestamp = buffer->ptrs.timestamp[absolute_index];

    // return ((u64)roundl((f64)timestamp.clock / buffer->resolution->coarse)) +
    //        timestamp.delta;
    // TODO: probably a micro optimisation but it should be possible to convert
    // this all to use integer multiplication and get rid of the casts. If we
    // can have "ratio" as some number of bins to convert the clocked timestamp
    // into an arrival time then this should be possible to do in a single step
    // clk_res resolution = *(buffer->resolution);
    // f64 ratio = resolution.coarse / resolution.fine;
    // return (u64)roundl((f64)timestamp.clock * ratio) + timestamp.delta;

    // NOTE: in testing this is ~3x faster for 2-fold cc counting
    return (*(buffer->conversion_factor) * timestamp.clock) + timestamp.delta;

    //         // tof = (truensync * self.sync_period + dtime * self.dtime_res)
    //         as u64;

    //         // sync_period: (sync_period? * 1e12) as u64,
    //         // dtime_res: (dtime_res? * 1e12) as u64,

    // clk_res resolution = *(buffer->resolution);
    // return timestamp.clock * (u64)(resolution.coarse * 1e12) +
    // timestamp.delta;
}
clk_slice
clk_init_base_ptrs(const clk_buffer* const buffer) {
    clk_slice slice = { 0 };
    u64 num_elems = *buffer->capacity;

    u64 channel_offset = sizeof(clk_buffer_info);
    u64 timestamp_offset = channel_offset + (sizeof(u8) * num_elems);

    slice.length = num_elems;
    slice.channel = (u8*)buffer->map_ptr + channel_offset;
    slice.timestamp = (clk_timetag*)buffer->map_ptr + (timestamp_offset / 16);
    return slice;
}
// clk_slice clk_get_slice(const clk_buffer *const buffer, const u64 capacity,
//                         u64 start, u64 stop) {
//
//     clk_slice slice = clk_init_base_ptrs(buffer, capacity);
//
//     slice.length = stop - start;
//     slice.channel += start;
//     slice.timestamp += start;
//     // slice.clock += start;
//     // slice.delta += start;
//     //
//     return slice;
// }

inline u64
clk_bins_from_time(const clk_res resolution, const f64 time) {
    u64 factor = (u64)roundl(1 / resolution.fine);
    return time * factor;
    // return (u64)roundl(time / resolution.fine);
}
inline f64
clk_time_from_bins(const clk_res resolution, const u64 bins) {
    return (f64)bins * resolution.fine;
}
inline f64
clk_to_time(clocked record, clk_res resolution) {
    return clk_as_bins(record, resolution) * resolution.fine;
}
inline u64
clk_as_bins(clocked record, clk_res resolution) {
    f64 ratio = resolution.coarse / resolution.fine;
    return (u64)roundl((f64)record.timestamp.clock * ratio) +
           record.timestamp.delta;
    // u64 factor = clk_conversion_factor(resolution);
    // return (factor * record.timestamp.clock) + record.timestamp.delta;
}
bool
clk_equal(clocked a, clocked b) {
    return ((true == (a.timestamp.clock == b.timestamp.clock)) &&
            (true == (a.timestamp.delta == b.timestamp.delta)));
}