tangy/_ext/src/picoquant_reader.h

// #include <stdint.h>


typedef struct {
    u8 channel;
    u64 time_tag;
} Record_HH2_T2;
typedef struct {
    u8 channel;
    u64 delta_t;
    u64 sync;
} Record_HH2_T3;
typedef struct {
    int photon;
    u64 overflow;
} res;
typedef struct {
    u64 overflow;
    u64 total_records;
    u64 record_count;
    u64 photon_count;
    u64 current_count;
} READER_STATUS;
static inline u64 get_overflow(const READER_STATUS *const status) {
    return status->overflow;
}
static inline u64 get_total_records(const READER_STATUS *const status) {
    return status->total_records;
}
static inline u64 get_record_count(const READER_STATUS *const status) {
    return status->record_count;
}
static inline u64 get_photon_count(const READER_STATUS *const status) {
    return status->photon_count;
}
static inline u64 get_current_count(const READER_STATUS *const status) {
    return status->current_count;
}
static inline int file_seek(FILE *filehandle, long int offset) {
    return fseek(filehandle, offset, SEEK_SET);
}
static inline u64 read_time_HH2_T2(const std_buffer *const buffer,
                                   FILE *filehandle, READER_STATUS *status,
                                   u64 max_time) {

    // does cur_sync need to have the reference subtracted?
    // while ((cur_sync < max_time) && (count <= rec_num)){

    unsigned int TTTRRec;
    int rec_size = sizeof(u32);
    int photon;
    int n;

    status->current_count = 0;

    Record_HH2_T2 record = {0};
    res out = {0};
    out.photon = 0;
    out.overflow = status->overflow;

    u64 count = ((std_buffer_info *)buffer->map_ptr)->count;
    u64 capacity = ((std_buffer_info *)buffer->map_ptr)->capacity;
    usize index = (count) % capacity;
    while ((record.time_tag < max_time) &&
           (status->record_count <= status->total_records)) {

        n = fread(&TTTRRec, 1, rec_size, filehandle);
        if (n != rec_size) {
            break;
        }
        status->record_count += 1;
        photon = Parse_HH2_T2(TTTRRec, &record, &out);

        if (photon != 0) {

            ++status->current_count;
            buffer->ptrs.channel[index] = record.channel;
            buffer->ptrs.timestamp[index] = record.time_tag;
            index = (index + 1) % capacity;
        };
    };

    status->photon_count += status->current_count;
    status->overflow = out.overflow;
    ((std_buffer_info *)buffer->map_ptr)->count = count + status->current_count;

    return 1;
}
static inline u64 read_time_HH2_T3(const clk_buffer *const buffer,
                                   FILE *filehandle, READER_STATUS *status,
                                   u64 max_time) {

    // does cur_sync need to have the reference subtracted?
    // while ((cur_sync < max_time) && (count <= rec_num)){

    unsigned int TTTRRec;
    int rec_size = sizeof(u32);
    int photon;
    int n;

    status->current_count = 0;

    Record_HH2_T3 record = {0};
    res out = {0};
    out.photon = 0;
    out.overflow = status->overflow;

    u64 count = ((clk_buffer_info *)buffer->map_ptr)->count;
    u64 capacity = ((clk_buffer_info *)buffer->map_ptr)->capacity;
    usize index = (count) % capacity;
    while ((record.sync < max_time) &&
           (status->record_count <= status->total_records)) {

        n = fread(&TTTRRec, 1, rec_size, filehandle);
        if (n != rec_size) {
            break;
        }
        status->record_count += 1;
        photon = Parse_HH2_T3(TTTRRec, &record, &out);

        if (photon == 1) {

            ++status->current_count;
            buffer->ptrs.channel[index] = record.channel;
            buffer->ptrs.timestamp[index] =
                (clk_timetag){.clock = record.sync, .delta = record.delta_t};
            // buffer->ptrs.clock[index] = record.sync;
            // buffer->ptrs.delta[index] = record.delta_t;
            index = (index + 1) % capacity;
        };
    };

    status->photon_count += status->current_count;
    status->overflow = out.overflow;
    ((clk_buffer_info *)buffer->map_ptr)->count = count + status->current_count;

    return 1;
}